# LovelyMiscLab

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
.workbuddy/memory/: 2026-07-02.md
crates/misclab-core/: Cargo.toml
crates/misclab-core/src/: ai.rs  cancel.rs  error.rs  input.rs  lib.rs  progress.rs
crates/misclab-core/src/graph/: composite.rs  compute.rs  executor.rs  mod.rs  model.rs  port.rs  script_node.rs
crates/misclab-core/src/model/: mod.rs
crates/misclab-core/src/node/: descriptor.rs  mod.rs  registry.rs
crates/misclab-core/src/nodes/: aes.rs  affine.rs  ai_judge.rs  ai_vision.rs  archive_extract.rs  archive_list.rs  atbash.rs  audio_info.rs  audio_spectrogram.rs  audio_util.rs  base32.rs  base45.rs  base58.rs  base62.rs  base64.rs  base64_stego.rs  base85.rs  base92.rs  basex.rs  bin_common.rs  binary.rs  binary_enhanced.rs  binary_info.rs  binary_overlay.rs  binary_sections.rs  binary_symbols.rs  bits_image.rs  bkcrack.rs  blind_watermark.rs  bmp_fix.rs  brainfuck.rs  braintools.rs  byte_viz.rs  caesar_brute.rs  charset.rs  coalesce.rs  compare.rs  concat.rs  crypto_analysis.rs  cryptojs_aes.rs  (+98 more)
crates/misclab-core/src/nodes/bkcrack/: engine.rs
crates/misclab-core/tests/: basex.rs  composite.rs  control.rs  crypto.rs  cyberchef.rs  encoding.rs  engine.rs  image_ops.rs  imagein.rs  logic.rs  param_input.rs  script_node.rs  stego.rs  stego_tools.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  jobs.rs  lib.rs  main.rs  modules.rs  settings.rs  state.rs
src-tauri/src/commands/: agent.rs  ai_workflow.rs  graph.rs  mcp.rs  mod.rs  modules.rs  project.rs  script_modules.rs  settings.rs  system.rs  update.rs
src-tauri/src/mcp/: auth.rs  handlers.rs  io_adapt.rs  itest.rs  mod.rs  server.rs  state.rs
src/app/: AgentPanel.tsx  AiGenerateDialog.tsx  CreateModuleDialog.tsx  CreateScriptNodeDialog.tsx  KeyboardShortcuts.tsx  LeftRail.tsx  LiveRunner.tsx  RunConsole.tsx  TitleBar.tsx  UpdateDialog.tsx  WindowResizeHandles.tsx
src/components/ui/: button.tsx  progress.tsx
src/flow/: Canvas.tsx  ContextMenu.tsx  GenericNode.tsx  ImageViewerModal.tsx  Inspector.tsx  LabeledEdge.tsx  ModuleLibrary.tsx  NodeSearchMenu.tsx  PortSuggest.tsx  WidgetRenderer.tsx  agentRunner.ts  canvasSync.ts  encapsulate.ts  layout.ts  loadTemplate.ts  nodeDescriptions.ts  nodeIcons.tsx  portColors.ts  portUtils.ts  portValue.tsx  runner.ts
src/lib/: bindings.ts  devMocks.ts  project.ts  templates.ts  tools.ts  types.ts
src/store/: agent.ts  ai.ts  descriptors.ts  graph.ts  imageViewer.ts  inspector.ts  moduleDialog.ts  paletteDrag.ts  portSuggest.ts  project.ts  run.ts  scriptDialog.ts  theme.ts  update.ts  view.ts
src/views/: CanvasView.tsx  EmptyState.tsx  McpPanel.tsx  ModuleRunDialog.tsx  ModulesView.tsx  SettingsView.tsx  TemplatesView.tsx
