[package]
name = "misclab-app"
description = "LovelyMiscLab — Tauri application shell (thin adapter over misclab-core)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (Windows quirk,
# see rust-lang/cargo#8519).
name = "misclab_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
misclab-core = { path = "../crates/misclab-core" }
# Pinned to 0.32: rusqlite 0.40 → libsqlite3-sys 0.38 uses the unstable
# `cfg_select!` macro in its build script, which fails on stable Rust 1.93.
# 0.32 bundles SQLite ~3.46 and has the same API for our usage. Revisit when
# cfg_select stabilizes.
rusqlite = { version = "0.32", features = ["bundled"] }
# NOTE: tauri-specta / specta 2.x auto-binding is deferred to M2 (pin a coherent
# specta 2.0-rc trio then; the data model gains `specta::Type` derives at the
# same time). For M0 the ping round-trip uses a hand-written typed wrapper.
