[package]
name = "misclab-app"
description = "LovelyMiscLab — Tauri application shell (thin adapter over misclab-core)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (Windows quirk,
# see rust-lang/cargo#8519).
name = "misclab_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
misclab-core = { path = "../crates/misclab-core" }
# Pinned to 0.32: rusqlite 0.40 → libsqlite3-sys 0.38 uses the unstable
# `cfg_select!` macro in its build script, which fails on stable Rust 1.93.
# 0.32 bundles SQLite ~3.46 and has the same API for our usage. Revisit when
# cfg_select stabilizes.
rusqlite = { version = "0.32", features = ["bundled"] }
# NOTE: tauri-specta / specta 2.x auto-binding is deferred to M2 (pin a coherent
# specta 2.0-rc trio then; the data model gains `specta::Type` derives at the
# same time). For M0 the ping round-trip uses a hand-written typed wrapper.

# --- MCP (Model Context Protocol) embedded server, behind the `mcp` feature ---
# Isolated so the heavy async/HTTP stack (rmcp + axum + tokio) is only pulled in
# when building with `--features mcp`, and so we can fall back to a hand-rolled
# JSON-RPC transport without touching the rest of the app if rmcp's brand-new
# 2.0 API bites us. `transport-streamable-http-server` transitively enables
# `transport-streamable-http-server-session` + `server-side-http`; the default
# `server` feature already brings in `schemars`.
rmcp = { version = "2", optional = true, features = ["transport-streamable-http-server"] }
axum = { version = "0.8", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "net", "sync", "macros", "signal"] }
tokio-util = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
schemars = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
uuid = { version = "1", optional = true, features = ["v4"] }

[features]
# MCP is on by default so the Settings panel is always present; the *server*
# itself stays off until the user enables it. Build with `--no-default-features`
# to compile the app without the MCP stack.
default = ["mcp"]
mcp = ["dep:rmcp", "dep:axum", "dep:tokio", "dep:tokio-util", "dep:tower", "dep:schemars", "dep:base64", "dep:uuid"]
